Commit 2/12/2020. IV Spread Class reworking.

--- a/Pokemon IV Breeding Probability Calculator.csproj
+++ b/Pokemon IV Breeding Probability Calculator.csproj
@@ -56,6 +56,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Eggs_Chance.cs" />
+    <Compile Include="IVSpread text.cs" />
     <Compile Include="WpfFAQ.xaml.cs">
       <DependentUpon>WpfFAQ.xaml</DependentUpon>
     </Compile>
